# Mobile-Robotics-Control

./: README.md
Assig2/: CMakeLists.txt
Assig2/config/: config_autonomous_maze.json
Assig2/maps/: metadata_maze_auto.yaml  test.xcf
Localization/mrc_particlefilter_students-main/: CMakeLists.txt  params.json
Localization/mrc_particlefilter_students-main/config/: testconfig.json
Localization/mrc_particlefilter_students-main/demos/: main_ex1.cpp  main_ex2.cpp  main_ex3.cpp
Localization/mrc_particlefilter_students-main/include/: tools.h
Localization/mrc_particlefilter_students-main/include/FilterComponents/: Particle.h  Resampler.h
Localization/mrc_particlefilter_students-main/include/Filters/: ParticleFilter.h  ParticleFilterBase.h
Localization/mrc_particlefilter_students-main/include/Objects/: World.h
Localization/mrc_particlefilter_students-main/src/: main.cpp  tools.cpp
Localization/mrc_particlefilter_students-main/src/FilterComponents/: Particle.cpp  Resampler.cpp
Localization/mrc_particlefilter_students-main/src/Filters/: ParticleFilter.cpp  ParticleFilterBase.cpp
Localization/mrc_particlefilter_students-main/src/Objects/: Robot.cpp  World.cpp
Localization/mrc_particlefilter_students-main/tests/: ex1.cpp  ex2.cpp  ex3.cpp  ex3b.cpp  ex4.cpp  ex4b.cpp  tooltest.cpp
Openspace2/: CMakeLists.txt
Openspace2/config/: config_autonomous_maze.json
Openspace2/maps/: metadata_maze_auto.yaml
Openspace2/src/: assig2.cpp  hello.cpp
maze/: linesMaze.pgm  linesMaze.xcf  maze2.yaml
openspace/: CMakeLists.txt
openspace/maps/: blank_maze.xcf  test.xcf
openspace/src/: assig2.cpp
week1/: CMakeLists.txt
week1/src/: hello.cpp
week2/config/: config_maze_small.json  params_maze_small.json
week2/maps/: metadata_maze_large.yaml
week2/mrc-navigation-assignment-1-main/config/: config_maze_large.json
week2/mrc-navigation-assignment-1-main/src/: tools.cpp
week2/mrc-navigation-assignment-1-main/src/Planner/: planning.cpp
week2/mrc-navigation-assignment-1-main/tests/: tooltest.cpp
week2/mrc-navigation-assignment-1-main_newVersionTry/: CMakeLists.txt
week2/mrc-navigation-assignment-1-main_newVersionTry/config/: params_maze_large.json
week2/mrc-navigation-assignment-1-main_newVersionTry/include/: tools.h
week2/mrc-navigation-assignment-1-main_newVersionTry/include/Objects/: Robot.h
week2/mrc-navigation-assignment-1-main_newVersionTry/include/Planner/: planning.h
week2/mrc-navigation-assignment-1-main_newVersionTry/maps/: metadata_maze_small.yaml
week2/mrc-navigation-assignment-1-main_newVersionTry/tests/: test_assignment1.cpp
week3-simpleObjectAvoidence/: CMakeLists.txt
week3-simpleObjectAvoidence/src/: beta_appraoch.txt.save  beta_approach.txt  config.h  crap2.txt  hello_work.cpp  utilis.h
